--- a/common/pyproject.toml
+++ b/common/pyproject.toml
@@ -4,7 +4,7 @@
 name = "common"
 version = "1.0.0"
 description = "Shared, validated data models and utilities for the code generation system."
-authors =
+authors = ["lee <giakyli0727@gmail.com>"]
 packages = [{ include = "common", from = "src"}]
 
 [tool.poetry.dependencies]
