--- a/orchestrator/pyproject.toml
+++ b/orchestrator/pyproject.toml
@@ -3,7 +3,7 @@
 name = "orchestrator"
 version = "1.0.0"
 description = "Production-ready workflow orchestrator service using Temporal."
-authors =
+authors = ["lee <giakyli0727@gmail.com>"]
 packages = [{ include = "orchestrator", from = "src" }]
 
 [tool.poetry.dependencies]
