--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@
 name = "code-generation-system"
 version = "1.0.0"
 description = "A resilient, asynchronous dual-agent code generation system, refactored for production."
-authors = ["Your Name <you@example.com>"]
+authors = ["lee <giakyli0727@gmail.com>"]
 readme = "README.md"
 packages = [
     { include = "common", from = "common/src"},
