--- a/sandbox/pyproject.toml
+++ b/sandbox/pyproject.toml
@@ -3,7 +3,7 @@
 name = "sandbox"
 version = "1.0.0"
 description = "Secure, isolated execution sandbox microservice."
-authors =
+authors = ["lee <giakyli0727@gmail.com>"]
 packages = [{ include = "sandbox", from = "src"}]
 
 [tool.poetry.dependencies]
